# RustAlgorithmTrading

./: .dockerignore  .gitignore  .ruff.toml  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAYBOOK.md  README.md  README_VI.md  install_all_dependencies_fast.sh  pyproject.toml  requirements.txt
.codex/: config.toml
analysis/: rsi_signal_analysis.py
android/: AGENTS.md  build.gradle.kts  gradle.properties  settings.gradle.kts
config/: __init__.py  config.py  system.development.json  system.json
data/: AGENTS.md  metrics.duckdb  observability.duckdb  observability.duckdb.wal
deployment/: Makefile  QUICKSTART.md  README.md  README.staging.md  docker-compose.dev.yml  docker-compose.observability.yml  go.Dockerfile  start-observability.sh
development/: AGENTS.md
docs/: API_DOCUMENTATION.md  AUTONOMOUS_SYSTEM_GUIDE.md  CICD_DEPLOYMENT_GUIDE.md  DATA_DOWNLOAD_GUIDE.md  DATA_MANAGEMENT.md  DOCS_CANONICAL_MAP.md  DOCUMENTATION_INDEX.md  INTEGRATION_GUIDE.md  MASTER_DOCUMENTATION.md  READING_VI.md  README.md  STORAGE_GUIDE.md  TEST_EXECUTION_GUIDE.md  index.md  python-backtesting-guide.md  workspace-structure.md
examples/: enhanced_momentum_example.py
frontend/: .gitignore  .vercelignore  DESIGN.md  README.md  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.ts
game/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FOLDER_STRUCTURE.md  GAMEPLAY.md  NETWORK.md  PERFORMANCE.md  RENDERING.md  package.json  project.bjseditor  tsconfig.json  tsconfig.tsbuildinfo
go/: .air.toml  AGENTS.md  go.mod  go.sum
ios/: .gitignore  AGENTS.md  agentdb.rvf
medium/: brownian-motion-in-finance-modeling-the-chaos-of-market-movements.md  building-a-sophisticated-momentum-strategy-residual-alpha-yang-zhang-volatility.md  embracing-market-uncertainty-with-japanese-serenity-an-introduction-to-itos-lemma.md  how-quants-identify-market-inefficiencies.md  how-quants-made-4144-returns-in-2020-while-markets-crashed-the-heston-model-edge.md  how-statistical-arbitrage-desks-made-779-during-the-april-tariff-crash.md  inside-the-brain-of-a-quant-hedge-fund-how-math-and-code-run-wall-street.md  monte-carlo-simulation-in-quantitative-finance-hrp-optimization-with-stochastic-volatility.md  renaissance-technologies-the-100-billion-built-on-statistical-arbitrage.md  rsi-trading-strategy-framework-a-comprehensive-backtesting-implementation-with-bias-prevention.md  the-400m-gain-165m-loss-how-two-sigmas-model-governance-failures-created-asymmetric-pl-impact.md  the-brutal-truth-about-portfolio-optimization-why-your-backtest-lies-to-you.md  the-martingale-paradox-why-mathematically-perfect-trading-strategies-fail-in-real-markets.md  we-backtested-a-viral-trading-strategy-the-results-will-teach-you-a-lesson.md
monitoring/: grafana-dashboard.json
nextjs/: AGENTS.md  DESIGN.md  firebase.json  mdx-components.tsx  next.config.mjs  package.json  prisma.config.ts  proxy.ts  tailwind.config.ts  tsconfig.json
ops/: AGENTS.md  Makefile  PRODUCTION_READINESS_RISK.md  autonomous-trading.service  docker-compose.yml
py_rt.egg-info/: PKG-INFO  SOURCES.txt
python/: .coveragerc  AGENTS.md  main.py  pyproject.toml  requirements.txt
python-trading/: pyproject.toml
rust/: AGENTS.md  Cargo.toml  README.md
rust/common/: Cargo.toml
rust/common/src/: config.rs  health.rs  http.rs  lib.rs  messaging.rs  metrics.rs  types.rs
rust/common/tests/: fuzz_parser.rs  integration_tests.rs  parser_tests.rs
rust/database/: Cargo.toml
rust/database/examples/: basic_usage.rs  migration_example.rs  observability_integration.rs
rust/database/src/: connection.rs  migrations.rs  query.rs  schema.rs  tests.rs
rust/execution-engine/src/: lib.rs  main.rs  retry.rs  router.rs  slippage.rs  stop_loss_executor.rs
rust/market-data/src/: aggregation.rs  lib.rs  main.rs  orderbook.rs  publisher.rs  websocket.rs
rust/market-data/tests/: orderbook_tests.rs
rust/risk-manager/: Cargo.toml
rust/risk-manager/src/: circuit_breaker.rs  lib.rs  limits.rs  main.rs  pnl.rs  reload.rs  stops.rs
rust/risk-manager/tests/: circuit_breaker_tests.rs  config_reload_tests.rs  limit_bva_tests.rs  limit_regression_tests.rs  stop_bench_tests.rs
rust/signal-bridge/: Cargo.toml
rust/signal-bridge/src/: backtest_runtime.rs  bridge.rs  features.rs  indicators.rs  lib.rs  main.rs
rust/tests/: Cargo.toml  lib.rs
rust/tests/benchmarks/: critical_path_benchmarks.rs  performance_benchmarks.rs
rust/tests/fixtures/: comprehensive_mocks.rs  mock_data.rs  mod.rs
rust/tests/integration/: test_concurrent.rs  test_duckdb_storage.rs  test_end_to_end.rs  test_error_handling_integration.rs  test_performance_load.rs  test_websocket.rs
rust/tests/unit/: test_alpaca_auth.rs  test_alpaca_client.rs  test_alpaca_data_parser.rs  test_alpaca_error_handling.rs  test_alpaca_rate_limiter.rs  test_errors.rs  test_market_data_orderbook.rs  test_orderbook.rs  test_retry.rs  test_risk_manager.rs  test_router_security.rs  test_security_fixes.rs  test_slippage.rs  test_types.rs
scratch/: debug_socket.py  test_port.py
scripts/: README.md  analyze_backtests.py  analyze_market_data.py  analyze_signals.py  api_optimizer.py  audit_correlation.py  audit_rerun.sh  autonomous_trading_system.sh  backtest_strategy3.py  build_optimized.sh  check_dependencies.sh  compliance_audit.sh  contract_audit.sh  deploy-staging.sh  download_historical_data.py  fix_utcnow.py  generate_audit_logs.py  generate_golden_risk_baseline.py  health_check.sh  install_dependencies.sh  migrate_to_native_filesystem.sh  production_validation.sh  rehearse_dropsafe_w4.py  rehearse_reconnect_w4.py  rehearse_rollback_w4.py  run-load-tests.sh  run_data_tests.sh  run_go_soak_test.py  run_ml_backtest.py  run_optimized_backtest.py  run_router_backtest.py  run_soak_fault_tests.py  setup.sh  setup_python_deps.sh  start-with-observability.sh  start_go_observability.sh  start_observability.sh  start_observability_api.py  start_services.sh  start_trading.sh  (+35 more)
src/: __init__.py
tests/: Cargo.toml  pytest.ini  test_alpaca_api_limits.py  test_alpaca_quick.py  test_data_download.py  (+3 more)
(+2077 files in other folders)
