[project]
name = "python-trading"
version = "0.1.0"
description = "Algorithmic trading system with backtesting and Monte Carlo simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.25.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pyarrow>=15.0.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501", # Line too long
    "W293", # Blank line contains whitespace
    "F401", # Unused import
    "F403", # Star imports
    "F405", # Undefined from star imports
    "F541", # Empty f-string
    "F821", # Undefined name
    "F841", # Unused local variable
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
