[workspace]
resolver = "2"
members = [
    "market-data",
    "signal-bridge",
    "risk-manager",
    "execution-engine",
    "common",
    "database",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Davi Castro Samora"]
license = "MIT"
repository = "https://github.com/SamoraDC/RustAlgorithmTrading"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Messaging
zmq = "0.10"

# Observability
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Python bindings
pyo3 = { version = "0.21.2", features = ["abi3-py312"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking
url = "2.5"
tungstenite = "0.23"

# Data structures
indexmap = "2.2"

# Testing
mockall = "0.12"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
