[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Data structures
indexmap.workspace = true

# HTTP server for health checks and metrics
axum = "0.7"
tokio.workspace = true
tracing.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
serde_test = "1.0"
tower = { version = "0.4", features = ["util"] }
rand = "0.8"

[lib]
name = "common"
path = "src/lib.rs"
