[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Database
duckdb = { version = "1.1.3", features = ["bundled", "modern-full", "r2d2"] }
r2d2 = "0.8"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Metrics
metrics.workspace = true

# Shared dependencies
common = { path = "../common" }

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
tempfile.workspace = true

[features]
default = []
migration-tools = []
test-utilities = []

[[example]]
name = "migration_example"
required-features = ["migration-tools"]
