[package]
name = "risk-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
common = { path = "../common" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Messaging
zmq.workspace = true

# Observability
metrics.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Data structures
indexmap.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"

[[bin]]
name = "risk-manager"
path = "src/main.rs"

[lib]
name = "risk_manager"
path = "src/lib.rs"
